# kitti_player

./: CMakeLists.txt  README.md
cfg/prototxt/: demo.prototxt  velodyne_only.prototxt
doc/: 命名规则.md  需求和用例.md
example/: CMakeLists.txt  player_demo.cpp
include/kitti/: common.h  player.h
include/kitti/data/: image_mat.h  oxts_data.h  sensor_data.h  timestamp.h  velodyne_points.h
include/kitti/node/: image_node.h  imu_node.h  node.h  node_factory.h  velodyne_node.h
include/kitti/utils/: formatted_filename.h  io.h  timestamp_file.h
proto/: CMakeLists.txt  kitti.proto
src/kitti/: CMakeLists.txt  common.cpp  player.cpp
src/kitti/data/: image_mat.cpp  oxts_data.cpp  sensor_data.cpp  timestamp.cpp  velodyne_points.cpp
src/kitti/node/: image_node.cpp  imu_node.cpp  node.cpp  node_factory.cpp  velodyne_node.cpp
src/kitti/utils/: formatted_filename.cpp  io.cpp  timestamp_file.cpp
